Solución a error con textarea izquierdo

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </section>
             <section class="right" id="rigth">
                 <img id="muneco" class="muneco" src="./assets/img/muneco.svg" alt="Muñeco con lupa en la mano">
-                <textarea id="textoFinal" class="textoFinal" placeholder="Ningún mensaje fue encontrado"></textarea>
+                <textarea disabled id="textoFinal" class="textoFinal" placeholder="Ningún mensaje fue encontrado"></textarea>
                 <p id="textoInfo" class="info">Ingresa el texto que desees encriptar o desencriptar.</p>
                 <button class="button_copiar bn_ocultar" id="button_copiar">Copiar</button>
             </section>
